@@ -38,6 +38,8 @@
 			<label index="no.success">No success messages</label>
 			<label index="scheduler.title">External import</label>
 			<label index="scheduler.description">This task can be used to set up automated executions of external imports, be it for all tables in one go or for a single table.</label>
+			<label index="allTables">All tables</label>
+			<label index="tableAndIndex">Table: %1$s, index: %2$s</label>
 		</languageKey>
 		<languageKey index="fr" type="array">
 			<label index="all">Tous</label>
@@ -71,6 +73,8 @@
 			<label index="no.success">Aucun message de réussite</label>
 			<label index="scheduler.title">Import externe</label>
 			<label index="scheduler.description">Cette tâche peut être utilisée pour automatiser l'exécution des imports externes, soit pour toutes les tables d'un coup, soit pour une table donnée.</label>
+			<label index="allTables">Toutes les tables</label>
+			<label index="tableAndIndex">Table: %1$s, index: %2$s</label>
 		</languageKey>
 	</data>
 </T3locallang>
